Page MenuHome GnuPG

assertion failure in compliance.c when using gpgv
Closed, ResolvedPublic

Description

I just noticed this in my dirmngr log:

DBG: >> GET /swdb.lst.sig HTTP/1.0\r\n
DBG: >> Host: versions.gnupg.org\r\n
DBG: TLS network write: 54/54
DBG: TLS network write: 0/0
DBG: http.c:request-header:
DBG: >> \r\n
DBG: TLS network write: 45/45
DBG: TLS network write: 0/0
DBG: TLS network read: 584/8192
DBG: TLS network read: 0/310
DBG: TLS network read: 0/310
gpgv: Signature made Fri Jun  2 10:47:32 2017 CEST
gpgv:                using RSA key D8692123C4065DEA5E0F3AB5249B39D24F25E3B6
gpgv: Good signature from "Werner Koch (dist sig)"
gpgv: Ohhhh jeeee: Assertion "initialized" in gnupg_pk_is_compliant failed (/home/wk/s/gnupg/common/compliance.c:103)
error running '/usr/local/bin/gpgv': terminated

Details

Version
master